[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/2d.gd" type="Script" id=1]
[ext_resource path="res://scripts/points.gd" type="Script" id=2]
[ext_resource path="res://scripts/grid.gd" type="Script" id=3]
[ext_resource path="res://scripts/camera_control.gd" type="Script" id=4]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 535.738, 316.08 )

[node name="2d" type="Node2D"]
script = ExtResource( 1 )

[node name="camera_control" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="camera_control"]
current = true

[node name="Area2D" type="Area2D" parent="camera_control/Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera_control/Camera2D/Area2D"]
shape = SubResource( 1 )

[node name="points" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="grid" type="Node2D" parent="points"]
script = ExtResource( 3 )

[node name="x_axis" type="Line2D" parent="points/grid"]
width = 3.0
default_color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="y_axis" type="Line2D" parent="points/grid"]
width = 3.0
default_color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="markers_holder" type="Node2D" parent="points/grid"]

[node name="point_holder" type="Node2D" parent="points"]
[connection signal="cam_connect" from="camera_control" to="points" method="_on_camera_control_cam_connect"]
[connection signal="camera_moved" from="camera_control" to="points" method="_on_camera_control_camera_moved"]
[connection signal="zoom_changed" from="camera_control" to="points/grid" method="_on_camera_control_zoom_changed"]
[connection signal="input_event" from="camera_control/Camera2D/Area2D" to="camera_control" method="_on_Area2D_input_event"]
